Added default styling to all recipe webpages with different background colors.

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -4,50 +4,52 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles/default.css">
         <title>Recipe | Cookies</title>
     </head>
 
-    <body>
-        <h1>Chewy Peanut Butter Chocolate Chip Cookies</h1>
+    <body style="background: linear-gradient(to right, #ee9ca7, #ffdde1);">
+        <div class="container">
+            <div class="center">
+                <h1>Chewy Peanut Butter Chocolate Chip Cookies</h1>
+                <p>a fantastic snack for all the cookie and peanut butter lovers out there.</p>
+                <img src="../recipes/img/cookies.webp" alt="cookies">
+            </div>
 
-        <img src="../recipes/img/cookies.webp" alt="cookies">
+            <h1>Ingredients:</h1>
 
-        <p>a fantastic snack for all the cookie and peanut butter lovers out there.</p>
+            <ul>
+                <li>1 cup of brown sugar</li>
+                <li>1/2 cup of white sugar</li>
+                <li>1/2 cup of butter (softened)</li>
+                <li>1/2 cup of peanut butter</li>
+                <li>2 eggs</li>
+                <li>2 tablespoons of light corn syrup</li>
+                <li>2 tablespoons of water</li>
+                <li>2 teaspoons of vanilla extract</li>
+                <li>2(1/2) cups of all-purpose flour</li>
+                <li>1 teaspoon of baking soda</li>
+                <li>1/2 teaspoon of salt</li>
+                <li>2 cups of chopped semisweet chocolate</li>
+            </ul>
 
-        <h1>Ingredients:</h1>
+            <h1>Steps:</h1>
 
-        <ul>
-            <li>1 cup of brown sugar</li>
-            <li>1/2 cup of white sugar</li>
-            <li>1/2 cup of butter (softened)</li>
-            <li>1/2 cup of peanut butter</li>
-            <li>2 eggs</li>
-            <li>2 tablespoons of light corn syrup</li>
-            <li>2 tablespoons of water</li>
-            <li>2 teaspoons of vanilla extract</li>
-            <li>2(1/2) cups of all-purpose flour</li>
-            <li>1 teaspoon of baking soda</li>
-            <li>1/2 teaspoon of salt</li>
-            <li>2 cups of chopped semisweet chocolate</li>
-        </ul>
-
-        <h1>Steps:</h1>
-
-        <ol>
-            <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-            <li>
-                Cream sugars, butter, and peanut butter in a large bowl until smooth. Beat in 
-                eggs one at a time, then stir in corn syrup, water, and vanilla. Combine flour, 
-                baking soda, and salt in a separate bowl, stir into peanut butter mixture. Fold in  
-                chocolate chunks.
-            </li>
-            <li>Scoop 1/4-cup portions of dough 3-inches apart onto un greased baking sheets.</li>
-            <li>
-                Bake in the preheated oven until edges are golden, 12 - 14 minutes. Allow cookies to
-                cool for 1 minutes before transferring to wire racks.
-            </li>
-        </ol>
-
-        <a href="/odin-recipes/index.html">return to all recipes</a>
+            <ol>
+                <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+                <li>
+                    Cream sugars, butter, and peanut butter in a large bowl until smooth. Beat in 
+                    eggs one at a time, then stir in corn syrup, water, and vanilla. Combine flour, 
+                    baking soda, and salt in a separate bowl, stir into peanut butter mixture. Fold in  
+                    chocolate chunks.
+                </li>
+                <li>Scoop 1/4-cup portions of dough 3-inches apart onto un greased baking sheets.</li>
+                <li>
+                    Bake in the preheated oven until edges are golden, 12 - 14 minutes. Allow cookies to
+                    cool for 1 minutes before transferring to wire racks.
+                </li>
+            </ol>
+        </div>
+        <a href="/odin-recipes/index.html" class="link">return to all recipes</a>
     </body>
 </html>
