--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -4,45 +4,49 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles/default.css">
         <title>Macaroni</title>
     </head>
 
-    <body>
-       <h1>Magnificent Macaroni Salad</h1> 
-       <img src="./img/macaroni-recipe.webp" alt="macaroni-salad">
+    <body style="background: linear-gradient(to right, #ffefba, #ffffff);">
+        <div class="container">
+            <div class="center">
+                <h1>Magnificent Macaroni Salad</h1> 
+                <p>a tasty unique dish, fun for anyone and everyone to make and enjoy.</p>
+                <img src="./img/macaroni-recipe.webp" alt="macaroni-salad">
+            </div>
 
-       <p>a tasty unique dish, fun for anyone and everyone to make and enjoy.</p>
+            <h1>Ingredients:</h1>
+            
+            <ul>
+                <li>3 cups of elbow macaroni</li>
+                <li>1(1/2) cups of mayonnaise</li>
+                <li>1/3 large onion, minced</li>
+                <li>1/4 cup of chopped fresh parsley</li>
+                <li>2 tablespoons prepared yellow mustard</li>
+                <li>2 teaspoons of rice vinegar</li>
+                <li>1 teaspoon of white sugar, or more for taste</li>
+                <li>3/4 teaspoon of celery seed</li>
+                <li>1/2 teaspoon of salt</li>
+                <li>3 hard-cooked eggs, chopped</li>
+            </ul>
 
-       <h1>Ingredients:</h1>
-       
-       <ul>
-        <li>3 cups of elbow macaroni</li>
-        <li>1(1/2) cups of mayonnaise</li>
-        <li>1/3 large onion, minced</li>
-        <li>1/4 cup of chopped fresh parsley</li>
-        <li>2 tablespoons prepared yellow mustard</li>
-        <li>2 teaspoons of rice vinegar</li>
-        <li>1 teaspoon of white sugar, or more for taste</li>
-        <li>3/4 teaspoon of celery seed</li>
-        <li>1/2 teaspoon of salt</li>
-        <li>3 hard-cooked eggs, chopped</li>
-       </ul>
+            <h1>Steps:</h1>
 
-       <h1>Steps:</h1>
+            <ol>
+                <li>
+                    Bring a large pot of lightly salted water to a boil. Cook macaroni in the boiling water,
+                    stirring occasionally until cooked through but firm to the bite, about 8 minutes. Drain.
+                </li>
+                <li>Rinse macaroni in cold water until cool; drain.</li>
+                <li>
+                    Stir mayonnaise, onion, parsley, mustard, rice vinegar, sugar, celery seed, and 
+                    salt together in a bowl. Add macaroni and eggs and stir to coat.
+                </li>
+                <li>Chill in the refrigerator for 30 minutes before saving.</li>
+            </ol>
+        </div>
 
-       <ol>
-        <li>
-            Bring a large pot of lightly salted water to a boil. Cook macaroni in the boiling water,
-            stirring occasionally until cooked through but firm to the bite, about 8 minutes. Drain.
-        </li>
-        <li>Rinse macaroni in cold water until cool; drain.</li>
-        <li>
-            Stir mayonnaise, onion, parsley, mustard, rice vinegar, sugar, celery seed, and 
-            salt together in a bowl. Add macaroni and eggs and stir to coat.
-        </li>
-        <li>Chill in the refrigerator for 30 minutes before saving.</li>
-       </ol>
-
-       <a href="/odin-recipes/index.html">return to all recipes</a>
+       <a href="/odin-recipes/index.html" class="link">return to all recipes</a>
     </body>
 </html>
