--- a/recipes/wings.html
+++ b/recipes/wings.html
@@ -4,34 +4,40 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles/default.css">
         <title>Recipe | Wings</title>
     </head>
 
-    <body>
-        <h1>Easy Lemon-Pepper Chicken Wings</h1>
-        <img src="../recipes/img/wings.webp" alt="chicken-wings">
-        <p>a wonderful snack for a football game, a reunion with family/friends, anywhere!</p>
+    <body style="background: linear-gradient(to right, #c9d6ff, #e2e2e2);">
+        <div class="container">
+            <div class="center">
+                <h1>Easy Lemon-Pepper Chicken Wings</h1>
+                <p>a wonderful snack for a football game, a reunion with family/friends, anywhere!</p>
+                <img src="../recipes/img/wings.webp" alt="chicken-wings">
+            </div>
 
-        <h1>Ingredients:</h1>
-        <ul>
-            <li>2 cups of oil, or as needed.</li>
-            <li>2 tablespoons of extra-virgin olive oil.</li>
-            <li>1 tablespoon of lemon-pepper seasoning.</li>
-            <li>12 chicken wings.</li>
-        </ul>
+            <h1>Ingredients:</h1>
 
-        <h1>Steps:</h1>
-        <ol>
-            <li>Heat oil in a deep-fryer or large saucepan to 375 degrees F (190 degrees C).</li>
-            <li>Stir olive oil and lemon-pepper seasoning together in a bowl; set aside.</li>
-            <li>
-                Fry wings in hot oil until no longer pink at the bone and the juices run clear,
-                about 8 minutes. An instant-read thermometer inserted near the bone should read 
-                165 degrees F (74 degrees C).
-            </li>
-            <li>Toss hot wings with lemon-pepper mixture to coat.</li>
-        </ol>
+            <ul>
+                <li>2 cups of oil, or as needed.</li>
+                <li>2 tablespoons of extra-virgin olive oil.</li>
+                <li>1 tablespoon of lemon-pepper seasoning.</li>
+                <li>12 chicken wings.</li>
+            </ul>
 
-        <a href="/odin-recipes/index.html">return to all recipes</a>
+            <h1>Steps:</h1>
+            <ol>
+                <li>Heat oil in a deep-fryer or large saucepan to 375 degrees F (190 degrees C).</li>
+                <li>Stir olive oil and lemon-pepper seasoning together in a bowl; set aside.</li>
+                <li>
+                    Fry wings in hot oil until no longer pink at the bone and the juices run clear,
+                    about 8 minutes. An instant-read thermometer inserted near the bone should read 
+                    165 degrees F (74 degrees C).
+                </li>
+                <li>Toss hot wings with lemon-pepper mixture to coat.</li>
+            </ol>
+        </div>
+
+        <a href="/odin-recipes/index.html" class="link">return to all recipes</a>
     </body>
 </html>
