--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,500;1,300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./styles/index.css">
         <title>Home | Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="../odin-recipes/recipes/macaroni.html">Magnificent Macaroni Salad</a></li>
-            <li><a href="../odin-recipes/recipes/wings.html">Easy Lemon-Pepper Chicken Wings</a></li>
-            <li><a href="../odin-recipes/recipes/cookies.html">Chewy Peanut Butter Chocolate Chip Cookies</a></li>
-        </ul>
+        <div class="container">
+            <h1 id="main-heading">Odin Recipes</h1>
+            <ul id="link-list">
+                <li><a href="../odin-recipes/recipes/macaroni.html">Magnificent Macaroni Salad</a></li>
+                <li><a href="../odin-recipes/recipes/wings.html">Easy Lemon-Pepper Chicken Wings</a></li>
+                <li><a href="../odin-recipes/recipes/cookies.html">Chewy Peanut Butter Chocolate Chip Cookies</a></li>
+            </ul>
+        </div>
     </body>
 </html>
